* Curve's button strips were misaligned by one pixel. (index.css) [Bug 3894]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@9223 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -1150,7 +1150,7 @@ span.lowerframe span
 	display: block;
 	font-size: 0.8em;
 	color: black;
-	background: url(../images/theme/menu_gfx.png) no-repeat 0 -60px;
+	background: url(../images/theme/menu_gfx.png) no-repeat 0 -61px;
 	padding: 0;
 	margin-left: 12px;
 	text-transform: uppercase;
@@ -1164,7 +1164,7 @@ span.lowerframe span
 }
 .buttonlist ul li a span
 {
-	background: url(../images/theme/menu_gfx.png) no-repeat 100% -60px;
+	background: url(../images/theme/menu_gfx.png) no-repeat 100% -61px;
 	display: block;
 	height: 24px;
 	line-height: 20px;
@@ -1179,13 +1179,13 @@ span.lowerframe span
 /* the active one */
 .buttonlist ul li a.active
 {
-	background: url(../images/theme/menu_gfx.png) no-repeat 0 -30px;
+	background: url(../images/theme/menu_gfx.png) no-repeat 0 -31px;
 	color: white;
 	font-weight: bold;
 }
 .buttonlist ul li a.active span
 {
-	background: url(../images/theme/menu_gfx.png) no-repeat 100% -30px;
+	background: url(../images/theme/menu_gfx.png) no-repeat 100% -31px;
 }
 .buttonlist ul li a.active
 {
